# MathTasks

Iter/: CMakeLists.txt  README.md  gen.bat
Iter/src/: Source.cpp
PointOnPlane/: CMakeLists.txt  README.md
PointOnPlane/src/: Source.cpp
